<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.qiwi.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="195dp"
        android:layout_height="179dp"
        android:layout_marginStart="108dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="424dp"
        android:contentDescription="@string/qiwi_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/qiwi_logo"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="340dp"
        android:layout_height="125dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Войти"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,UsingOnClickInXml"
        android:clickable="true"
        android:onClick="toastMe"
        android:focusable="true" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="247dp"
        android:layout_height="66dp"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="200dp"
        android:autofillHints=""
        android:backgroundTint="#F57222"
        android:ems="10"
        android:hint="@string/Логин"
        android:inputType="phone"
        android:textColor="#F57222"
        android:textColorHighlight="#F57222"
        android:textColorHint="#F57222"
        android:textColorLink="#F57222"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="247dp"
        android:layout_height="66dp"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="112dp"
        android:autofillHints=""
        android:backgroundTint="#F57222"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/Токен"
        android:inputType="textMultiLine"
        android:textColor="#F57222"
        android:textColorHighlight="#F57222"
        android:textColorHint="#F57222"
        android:textColorLink="#F57222"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="41dp"
        android:layout_height="39dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="116dp"
        android:clickable="true"
        android:contentDescription="@string/token"
        android:onClick="clickNew"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toEndOf="@+id/editTextTextMultiLine"
        app:srcCompat="@drawable/token"
        tools:ignore="ImageContrastCheck,TouchTargetSizeCheck,UsingOnClickInXml"
        android:focusable="true" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="41dp"
        android:layout_height="39dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="44dp"
        android:clickable="true"
        android:contentDescription="@string/nomer"
        android:onClick="clickNomer"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/token"
        tools:ignore="ImageContrastCheck,TouchTargetSizeCheck,UsingOnClickInXml"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>